Fix horizontal jumping when there is no content to scroll

--- a/src/client/scss/_reboot.scss
+++ b/src/client/scss/_reboot.scss
@@ -18,3 +18,7 @@ ul {
   min-font-size: 15px;
   text-decoration: none;
 }
+
+body {
+  overflow-y: scroll;
+}
